# gpui-nav

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/basic_navigation/: Cargo.toml  README.md
examples/basic_navigation/src/: app_state.rs  main.rs
examples/basic_navigation/src/screens/: home.rs  mod.rs  profile.rs  settings.rs
src/: context.rs  lib.rs  navigator.rs  screen.rs  tests.rs
