[package]
name = "gpui-nav"
version = "0.1.0"
edition = "2024"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
repository = "https://github.com/benodiwal/gpui-nav"
license = "MIT"
keywords = ["gui", "navigation", "gpui", "router"]
categories = ["gui", "ui"]
readme = "README.md"

[dependencies]
gpui = "0.2.1"

[[example]]
name = "basic.rs"
path = "examples/basic.rs"

[[example]]
name = "advanced.rs"
path = "examples/advanced.rs"