[package]
name = "gpui-nav"
description = "A lightweight screen navigation library for GPUI"
version = "0.1.0"
edition = "2024"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
repository = "https://github.com/benodiwal/gpui-nav"
license = "MIT"
keywords = ["gui", "navigation", "gpui", "router"]
categories = ["gui"]
readme = "README.md"

exclude = [
    "examples/*",
    "tests/*",
    ".github/*",
]

[dependencies]
gpui = "0.2.1"

[dev-dependencies]
gpui = { version = "0.2.1", features = ["test-support"] }